tests/fsharp/core/state-machines/neg-resumable-01.bsl

neg-resumable-01.fsx(62,17,63,37): typecheck error FS3501: Invalid resumable code. A 'let rec' occured in the resumable code specification

neg-resumable-01.fsx(70,9,70,19): typecheck error FS3402: The construct '__resumeAt' may only be used in valid resumable code.

neg-resumable-01.fsx(75,42,75,54): typecheck error FS3402: The construct '__resumeAt' may only be used in valid resumable code.

neg-resumable-01.fsx(83,21,83,31): typecheck error FS3402: The construct '__resumeAt' may only be used in valid resumable code.

neg-resumable-01.fsx(92,23,92,41): typecheck error FS3402: The construct '__resumableEntry' may only be used in valid resumable code.

neg-resumable-01.fsx(104,31,104,47): typecheck error FS3402: The construct '__resumableEntry' may only be used in valid resumable code.

neg-resumable-01.fsx(106,29,106,39): typecheck error FS3402: The construct '__resumeAt' may only be used in valid resumable code.

neg-resumable-01.fsx(122,31,122,47): typecheck error FS3402: The construct '__resumableEntry' may only be used in valid resumable code.

neg-resumable-01.fsx(144,31,144,47): typecheck error FS3402: The construct '__resumableEntry' may only be used in valid resumable code.
